--- a/Reports/Web-Automation_Task.html
+++ b/Reports/Web-Automation_Task.html
@@ -32,10 +32,10 @@
 </ul>
 <ul class="nav-right">
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Login Report</span></a>
+<a href="#"><span class="badge badge-primary">Web Automation Test Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Thursday, April 18, 2024, 02:30 am</span></a>
+<a href="#"><span class="badge badge-primary">Thursday, April 18, 2024, 11:17 am</span></a>
 </li>
 </ul>
 </div>
@@ -92,7 +92,7 @@
           <div class="test-detail">
             <p class="name">Navigate to Web Tables</p>
             <p class="text-sm">
-              <span>02:31:02</span> / <span>00:00:00:016</span>
+              <span>11:18:23</span> / <span>00:00:00:011</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -101,9 +101,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Navigate to Web Tables</h5>
-<span class='badge badge-success'>04.18.2024 02:31:02</span>
-<span class='badge badge-danger'>04.18.2024 02:31:02</span>
-<span class='badge badge-default'>00:00:00:016</span>
+<span class='badge badge-success'>04.18.2024 11:18:23</span>
+<span class='badge badge-danger'>04.18.2024 11:18:23</span>
+<span class='badge badge-default'>00:00:00:011</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -117,7 +117,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>02:31:02</td>
+        <td>11:18:23</td>
         <td>
           Successfully navigated to Web Tables
         </td>
@@ -134,7 +134,7 @@
           <div class="test-detail">
             <p class="name">validate User List Table</p>
             <p class="text-sm">
-              <span>02:31:03</span> / <span>00:00:00:001</span>
+              <span>11:18:23</span> / <span>00:00:00:002</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -143,9 +143,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">validate User List Table</h5>
-<span class='badge badge-success'>04.18.2024 02:31:03</span>
-<span class='badge badge-danger'>04.18.2024 02:31:03</span>
-<span class='badge badge-default'>00:00:00:001</span>
+<span class='badge badge-success'>04.18.2024 11:18:23</span>
+<span class='badge badge-danger'>04.18.2024 11:18:23</span>
+<span class='badge badge-default'>00:00:00:002</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -159,7 +159,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>02:31:03</td>
+        <td>11:18:23</td>
         <td>
           Successfully validated User List Table
         </td>
@@ -176,7 +176,7 @@
           <div class="test-detail">
             <p class="name">Click add user</p>
             <p class="text-sm">
-              <span>02:31:03</span> / <span>00:00:00:001</span>
+              <span>11:18:23</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -185,9 +185,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Click add user</h5>
-<span class='badge badge-success'>04.18.2024 02:31:03</span>
-<span class='badge badge-danger'>04.18.2024 02:31:03</span>
-<span class='badge badge-default'>00:00:00:001</span>
+<span class='badge badge-success'>04.18.2024 11:18:23</span>
+<span class='badge badge-danger'>04.18.2024 11:18:23</span>
+<span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -201,7 +201,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>02:31:03</td>
+        <td>11:18:23</td>
         <td>
           Add User button successfully clicked
         </td>
@@ -218,7 +218,7 @@
           <div class="test-detail">
             <p class="name">Add user1</p>
             <p class="text-sm">
-              <span>02:31:05</span> / <span>00:00:00:001</span>
+              <span>11:18:24</span> / <span>00:00:00:001</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -227,8 +227,8 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Add user1</h5>
-<span class='badge badge-success'>04.18.2024 02:31:05</span>
-<span class='badge badge-danger'>04.18.2024 02:31:05</span>
+<span class='badge badge-success'>04.18.2024 11:18:24</span>
+<span class='badge badge-danger'>04.18.2024 11:18:24</span>
 <span class='badge badge-default'>00:00:00:001</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
@@ -243,7 +243,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>02:31:05</td>
+        <td>11:18:24</td>
         <td>
           User 1 successfully added
         </td>
@@ -260,7 +260,7 @@
           <div class="test-detail">
             <p class="name">Add user2</p>
             <p class="text-sm">
-              <span>02:31:07</span> / <span>00:00:00:001</span>
+              <span>11:18:26</span> / <span>00:00:00:001</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -269,8 +269,8 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Add user2</h5>
-<span class='badge badge-success'>04.18.2024 02:31:07</span>
-<span class='badge badge-danger'>04.18.2024 02:31:07</span>
+<span class='badge badge-success'>04.18.2024 11:18:26</span>
+<span class='badge badge-danger'>04.18.2024 11:18:26</span>
 <span class='badge badge-default'>00:00:00:001</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=5</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
@@ -285,7 +285,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>02:31:07</td>
+        <td>11:18:26</td>
         <td>
           User 2 successfully added
         </td>
@@ -302,7 +302,7 @@
           <div class="test-detail">
             <p class="name">Verify usernames are unique</p>
             <p class="text-sm">
-              <span>02:31:07</span> / <span>00:00:00:002</span>
+              <span>11:18:26</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -311,9 +311,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Verify usernames are unique</h5>
-<span class='badge badge-success'>04.18.2024 02:31:07</span>
-<span class='badge badge-danger'>04.18.2024 02:31:07</span>
-<span class='badge badge-default'>00:00:00:002</span>
+<span class='badge badge-success'>04.18.2024 11:18:26</span>
+<span class='badge badge-danger'>04.18.2024 11:18:26</span>
+<span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=6</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -327,7 +327,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>02:31:07</td>
+        <td>11:18:26</td>
         <td>
           Successfully verified username
         </td>
@@ -344,7 +344,7 @@
           <div class="test-detail">
             <p class="name">Verify users</p>
             <p class="text-sm">
-              <span>02:31:07</span> / <span>00:00:00:000</span>
+              <span>11:18:26</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -353,8 +353,8 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Verify users</h5>
-<span class='badge badge-success'>04.18.2024 02:31:07</span>
-<span class='badge badge-danger'>04.18.2024 02:31:07</span>
+<span class='badge badge-success'>04.18.2024 11:18:26</span>
+<span class='badge badge-danger'>04.18.2024 11:18:26</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=7</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
@@ -369,7 +369,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>02:31:07</td>
+        <td>11:18:26</td>
         <td>
           Successfully verified users
         </td>
@@ -420,49 +420,49 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>02:31:02 am</td>
+<td>11:18:23 am</td>
 <td>
 <a href="#" class="linked" test-id='1' id='1'>Navigate to Web Tables</a>
 </td>
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>02:31:03 am</td>
+<td>11:18:23 am</td>
 <td>
 <a href="#" class="linked" test-id='2' id='2'>validate User List Table</a>
 </td>
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>02:31:03 am</td>
+<td>11:18:23 am</td>
 <td>
 <a href="#" class="linked" test-id='3' id='3'>Click add user</a>
 </td>
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>02:31:05 am</td>
+<td>11:18:24 am</td>
 <td>
 <a href="#" class="linked" test-id='4' id='4'>Add user1</a>
 </td>
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>02:31:07 am</td>
+<td>11:18:26 am</td>
 <td>
 <a href="#" class="linked" test-id='5' id='5'>Add user2</a>
 </td>
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>02:31:07 am</td>
+<td>11:18:26 am</td>
 <td>
 <a href="#" class="linked" test-id='6' id='6'>Verify usernames are unique</a>
 </td>
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>02:31:07 am</td>
+<td>11:18:26 am</td>
 <td>
 <a href="#" class="linked" test-id='7' id='7'>Verify users</a>
 </td>
@@ -484,13 +484,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Thursday, April 18, 2024, 02:30 am</h3>
+<h3>Thursday, April 18, 2024, 11:17 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Thursday, April 18, 2024, 02:31 am</h3>
+<h3>Thursday, April 18, 2024, 11:18 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -560,7 +560,7 @@
 </div></div>
 <script>
 var timeline = {
-"Navigate to Web Tables":0.016,"validate User List Table":0.001,"Click add user":0.001,"Add user1":0.001,"Add user2":0.001,"Verify usernames are unique":0.002,"Verify users":0
+"Navigate to Web Tables":0.011,"validate User List Table":0.002,"Click add user":0,"Add user1":0.001,"Add user2":0.001,"Verify usernames are unique":0,"Verify users":0
 };
 </script>
 <div class="row">
